--- a/index.html
+++ b/index.html
@@ -5,8 +5,23 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Cronometro</title>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"/>
+
+
 </head>
 <body>
-
+  <div class="marco">
+    <div class="tiempo" id="tiempo">00:00:00.000</div>
+    <div class="botones-contenedor">
+      <div class="btn" onclick="iniciar()">
+        <i class="fas fa-play"></i>
+      </div>
+      <div class="btn" onclick="pausar()">
+        <i class="fas fa-pause"></i>
+      </div>
+      <div class="btn" onclick="reiniciar()">
+        <i class="fas fa-undo-alt"></i>
+      </div>
+    </div>
 </body>
 </html>
