--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Cronometro</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"/>
-
-
+  <link rel="stylesheet" href="style.css">
+  <link rel="shortcut icon" href="img/chronometer.png">
 </head>
 <body>
   <div class="marco">
